# observability-stack

./: .dockerignore  .env.example  .gitignore  .gitmodules  FUNCTIONALITY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  UI_IMPLEMENTATION_SUMMARY.md  UI_SYNC_SUMMARY.md  debug_trace.py  docker-compose.prod.yml  docker-compose.yml  verify_api.sh
backend/: .dockerignore  Dockerfile  README.md  backfill_rubric_prompt.py  clear_evaluations.py  demo_parallel_agents.py  demo_retry.py  docker-compose.yml  migrate_application_table.py  migrate_encrypt_credentials.py  migrate_evaluations_table.py  migrate_traces_table.py  pyproject.toml  verify_grouping.py  vuln-scanning-report.md
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  agents.py  alert_rules.py  alerts.py  analytics.py  auth.py  evaluations.py  ingest.py  notification_channels.py  projects.py  providers.py  roles.py  rules.py  system_metrics.py  tools.py  users.py  workflows.py
backend/app/core/: clickhouse.py  config.py  database.py  evaluation_runner.py  logging_config.py  permissions.py  scheduler.py  schema.py  security.py
backend/app/core/evaluation/: __init__.py  core.py  trace_utils.py
backend/app/core/evaluation/integrations/: __init__.py  deepeval.py  (+5 more)
backend/app/migrations/: sync_metrics.py
backend/app/models/: alert.py  alert_rule.py  all_models.py  batch_evaluation.py  drift_metric.py  evaluation_result.py  evaluation_rule.py  llm_provider.py  metric.py  notification_channel.py  quality_metric.py  workflow.py
backend/app/services/: alert_checker.py  alert_runner.py  drift_detector.py  quality_monitor.py
backend/app/services/notifications/: __init__.py  slack.py  teams.py  webhook.py
backend/scripts/: reset_db.py
(+130 files in other folders)
